lambda-appsync-proc/tests/fail/invalid_type_operation_arg_override.rs
use lambda_appsync::appsync_lambda_main;

appsync_lambda_main!(
    "../../../../schema.graphql",
    exclude_lambda_handler = true,
    // Argument override with invalid type
    field_type_override = Query.player.id: BadId,
);

fn main() {}
