lambda-appsync-proc/tests/fail/invalid_type_operation_arg_override.stderr
error[E0412]: cannot find type `BadId` in this scope
 --> tests/fail/invalid_type_operation_arg_override.rs:7:44
  |
7 |     field_type_override = Query.player.id: BadId,
  |                                            ^^^^^ not found in this scope
